Allow page refresh. Suggest room to join if refreshed. Prevent player entering more than one room. Show if player is discarding. Add room cleanup after 24 hours. Fix showing my hidden card regression. Show which card was hidden at the end. Allow early equation submission. Prevent malformed early submission. Remove username whitespace. Limit username to 12 characters

--- a/public/style.css
+++ b/public/style.css
@@ -314,6 +314,7 @@ body {
 
 #bettingControls {
     position: absolute;
+    text-align: center;
     width: 370px;
     bottom: 1%;
     left: 50%;
@@ -395,7 +396,7 @@ body {
     cursor: pointer;
 }
 
-#confirmResults {
+#confirmResults, #confirmEquationFormed {
     padding: 10px 16px;
     font-size: 16px;
     border: none;
